Fix broken aside colors in dark mode
Our color overrides were meant to only apply to light mode, not both light and dark mode.

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -1,4 +1,4 @@
-:root {
+:root[data-theme='light'] {
     --sl-color-blue-low: hsl(var(--sl-hue-blue), 88%, 98%) !important;
     --sl-color-purple-low: hsl(var(--sl-hue-blue), 88%, 98%) !important;
   }
